--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.3",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
